# task_trecker

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  env-example  pyproject.toml
alembic/: env.py
alembic/versions/: 0f7fb8764d3e_init_migration.py  d27c092645c5_start_migrations.py
src/: main.py
src/app/SQLAlchemyRepository/: repository.py
src/app/tasks/: __init__.py  dependencies.py  irepository.py  repository.py  router.py  schemas.py  services.py  validators.py
src/auth/: auth.py  manager.py  router.py  schemas.py
src/core/: base.py  config.py  db.py  enum.py
src/infrastructure/kafka/: depends_kafka.py  kafka_produser.py
src/infrastructure/redis/: redis_connect.py
src/migrations/: env.py
src/migrations/versions/: 0d975fed47b4_init_migration.py  310613ac2915_unique_title.py  9bca614854cf_init.py  b32935326c2a_init_migration.py
src/models/: task.py  user.py
src/utils/: decode_token.py  middleware.py
src/utils/SQLAlchemyRepository/: repository.py
