[tool.poetry]
name = "task-trecker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
pydantic = "^2.9.2"
uvicorn = {extras = ["standart"], version = "^0.32.0"}
alembic = "^1.13.3"
pydantic-settings = "^2.5.2"
python-dotenv = "^1.0.1"
pre-commit = "^4.0.1"
ruff = "^0.6.9"
black = "^24.10.0"
isort = "^5.13.2"
asyncpg = "^0.29.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
extend-ignore = ["F821"]
